--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
             During my first two years at CMU, I wanted to be a software engineer. It seemed like all the cool kids were doing it, and I liked coding. But by the beginning of my junior year, with an engineering internship and several CS classes under my belt, I realized that I didn't want to stare at a computer screen for 40 hours a week for the rest of my life. Throughout my junior year, I found the work I did in my HCI classes much more engaging and fun, so I decided to make the pivot to UX.
             </p>
             <p>
-            So what's next? I'm on track to graduate in May of 2019, and ideally I'll be on my way in to a UX position at a tech or consulting company. Stay tuned!
+            So what's next? I'm on track to graduate in May of 2019, and I'll be returning to Deloitte Digital full time as a UX Designer!
             </p>
         </div>
       </div>
