updated links on pages

--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
           <img src="pics/emily.jpg" id="about-pic">
           
           <div id="about-description">
-            Hi there! If you want to know a little bit more about me, you’ve come to the right place. I'm originally from Mountain View, California, but I went to Carnegie Mellon in search of the East Coast experience. Little did I know, Pittsburgh is closer to Ohio than New York - but it's all good, they've got good pierogies.
+            Hi there! If you want to know a little bit more about me, you’ve come to the right place. I'm originally from Mountain View, California, but I went to Carnegie Mellon in search of the East Coast experience. Little did I know, Pittsburgh is closer to Ohio than New York - but it's all good, we've got good pierogies.
             <p>
             My first exposure to anything remotely related to UI/UX was during my senior year in high school at <a href="http://www.freestyleacademy.rocks/">Freestyle Academy</a>, where I took Web/Audio Production and Graphic Design. I learned that I liked making pretty websites, and found a creative outlet that wasn't writing (my other passion in high school).
             </p>
@@ -48,7 +48,10 @@
             During my first two years at CMU, I wanted to be a software engineer. It seemed like all the cool kids were doing it, and I liked coding. But by the beginning of my junior year, with an engineering internship and several CS classes under my belt, I realized that I didn't want to stare at a computer screen for 40 hours a week for the rest of my life. Throughout my junior year, I found the work I did in my HCI classes much more engaging and fun, so I decided to make the pivot to UX.
             </p>
             <p>
-            So what's next? I'm on track to graduate in May of 2019, and I'll be returning to Deloitte Digital full time as a UX Designer!
+            My design (and life) philosophy is all about minimalism. Yes, I am a total fangirl of <a href="https://www.amazon.com/dp/B00KK0PICK/ref=dp-kindle-redirect?_encoding=UTF8&btkr=1">The Life-Changing Magic of Tidying Up</a>, but that doesn’t mean I only own one pair of shoes and live in a 200 square foot apartment. Rather, I firmly believe that “in anything at all, perfection is finally attained not when there is no longer anything to add, but when there is no longer anything to take away” (Antoine de Saint-Exupery).
+            </p>
+            <p>
+            In my free time, I like to run half marathons, cook, and fantasize about owning a Corgi. I spent this past summer interning at <a href="https://www.deloittedigital.com/">Deloitte Digital</a> as a UX Designer in Arlington, VA, where I will return full time next fall!
             </p>
         </div>
       </div>
