--- a/chutzpow.html
+++ b/chutzpow.html
@@ -165,14 +165,14 @@
 			</div>
 			</div>
 
-		  	<a href="zensors.html" class="next-project" style="background-color: #18A398; float: right"> 
-		  		ZENSORS
+		  	<a href="newstagram.html" class="next-project" style="background-color: #18A398; float: right"> 
+		  		NEWSTAGRAM
 		  		<i class="fa fa-caret-right"></i>
 		  	</a>
 
-		  	<a href="newstagram.html" class="next-project" onclick="openPage('newstagram.html')" style="background-color: #18A398; float: left"> 
+		  	<a href="zensors.html" class="next-project" onclick="openPage('newstagram.html')" style="background-color: #18A398; float: left"> 
 		  		<i class="fa fa-caret-left"></i>
-		  		NEWSTAGRAM
+		  		ZENSORS
 		  	</a>
 	  	</div>
 
