--- a/index.html
+++ b/index.html
@@ -42,10 +42,8 @@
           <div id="home-text-title">PORAT</div>
           <div id="home-text-description">
             <p id="my-location"><i class="fa fa-map-marker"></i> Pittsburgh, PA</p>
-            <p>I am a senior at Carnegie Mellon University studying <a href="https://www.cmu.edu/information-systems/">Information Systems</a> and <a href="https://hcii.cmu.edu/">Human-Computer Interaction</a>.</p>
-            <!-- <p>I am an aspiring minimalist when it comes to both life and design. That doesn’t mean I only own one pair of shoes and live in a 200 square foot apartment. Rather, I firmly believe that “in anything at all, perfection is finally attained not when there is no longer anything to add, but when there is no longer anything to take away” (Antoine de Saint-Exupery).</p>  -->
+            <p>I am a senior at Carnegie Mellon University studying <a href="https://www.cmu.edu/information-systems/">Information Systems</a> and <a href="https://hcii.cmu.edu/">HCI</a>.</p>
             <p id="mobile-optional">Spreadsheets are my secret weapon, I can't leave a meeting without a list of action items, and my room is weirdly clean at all times. I take pleasure in getting sh*t done, and my goal in all my work is to help people do exactly that.</p>
-   <!--          <p>In my free time, I like to run half marathons, cook, and fantasize about owning a Corgi. I spent this past summer interning at <a href="https://www.deloittedigital.com/">Deloitte Digital</a> as a UX Designer in Arlington, VA, where I will return full time next fall!</p> -->
             <a href="resume.pdf" class="learn-about">Résumé</a>
           </div>
         </div>
