--- a/l&d.html
+++ b/l&d.html
@@ -260,8 +260,8 @@
 		</div>
 		</div>
 
-		  	<a href="newstagram.html" class="next-project" style="background-color: #49ce5c; float: right"> 
-		  		NEWSTAGRAM
+		  	<a href="zensors.html" class="next-project" style="background-color: #49ce5c; float: right"> 
+		  		ZENSORS
 		  		<i class="fa fa-caret-right"></i>
 		  	</a>
 
