--- a/newstagram.html
+++ b/newstagram.html
@@ -136,16 +136,16 @@
 			We incorporated the feedback we got into the prototype, which we created with Adobe XD. View the prototype <a href="https://adobe.ly/2FygOXL">here</a>.
 		</div>
 
-
-		  	<a href="chutzpow.html" class="next-project" style="background-color: #662C92; float: right"> 
-		  		CHUTZ-POW!
+		  	<a href="upark.html" class="next-project" style="background-color: #662C92; float: right"> 
+		  		UPARK
 		  		<i class="fa fa-caret-right"></i>
 		  	</a>
 
-		  	<a href="l&d.html" class="next-project" style="background-color: #662C92; float: left"> 
+		  	<a href="chutzpow.html" class="next-project" style="background-color: #662C92; float: left"> 
 		  		<i class="fa fa-caret-left"></i>
-		  		L&D PORTAL
+		  		CHUTZ-POW!
 		  	</a>
+
 	  	</div>
 
 	<div id="footer"></div>
