--- a/upark.html
+++ b/upark.html
@@ -159,10 +159,10 @@
 		  		<i class="fa fa-caret-right"></i>
 		  	</a>
 
-		  	<a href="zensors.html" class="next-project" style="background-color: #EE6B4D; float: left"> 
+		  	<a href="newstagram.html" class="next-project" style="background-color: #EE6B4D; float: left"> 
 		  	
 		  		<i class="fa fa-caret-left"></i>
-		  		ZENSORS
+		  		NEWSTAGRAM
 		  	</a>
 	  	</div>
 	  	<div id="footer"></div>
