--- a/zensors.html
+++ b/zensors.html
@@ -226,14 +226,14 @@
 
 		</div>
 
-			<a href="upark.html" class="next-project" style="background-color: #33312E; float: right"> 
-		  		UPARK
+			<a href="chutzpow.html" class="next-project" style="background-color: #33312E; float: right"> 
+		  		CHUTZ-POW
           <i class="fa fa-caret-right"></i>
 		  	</a>
 
-		  	<a href="chutzpow.html" class="next-project" style="background-color: #33312E; float: left"> 
+		  	<a href="l&d.html" class="next-project" style="background-color: #33312E; float: left"> 
 		  		<i class="fa fa-caret-left"></i> 
-          CHUTZ-POW
+          L&D PORTAL
 		  	</a>
 	  	</div>
 	</div>
