--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
       <div id="projects" class="margin-med">
 
         <div id="featured projects">
-
           <div class="project section" style="margin-top: 18vh">
+          <div id="secondary-title">FEATURED PROJECTS</div>
             <a href="l&d.html"><img  src="pics/l&d.jpg" class="project-pic" style="opacity:1"></a>
             <div class="caption">
               <div class="project-title">Learning & Development Portal</div>
@@ -102,7 +102,7 @@
             <div class="project-title">UPark</div>
             A mobile app that connects unused driveways with those in need of a place to park.
             </div>
-        </div>
+        </div> 
 
 
         <div class="section">
