--- a/about.html
+++ b/about.html
@@ -51,7 +51,8 @@
             My design (and life) philosophy is all about minimalism. Yes, I am a total fangirl of <a href="https://www.amazon.com/dp/B00KK0PICK/ref=dp-kindle-redirect?_encoding=UTF8&btkr=1">The Life-Changing Magic of Tidying Up</a>, but that doesn’t mean I only own one pair of shoes and live in a 200 square foot apartment. Rather, I firmly believe that “in anything at all, perfection is finally attained not when there is no longer anything to add, but when there is no longer anything to take away” (Antoine de Saint-Exupery).
             </p>
             <p>
-            In my free time, I like to run half marathons, cook, and fantasize about owning a Corgi. I spent this past summer interning at <a href="https://www.deloittedigital.com/">Deloitte Digital</a> as a UX Designer in Arlington, VA, where I will return full time next fall!
+            In my free time, I like to run half marathons, cook, and fantasize about owning a Corgi. 
+<!--             I spent this past summer interning at <a href="https://www.deloittedigital.com/">Deloitte Digital</a> as a UX Designer in Arlington, VA, where I will return full time next fall! -->
             </p>
         </div>
       </div>
