--- a/l&d.html
+++ b/l&d.html
@@ -98,8 +98,8 @@
 		<div class="panel">
 		I didn't want to spend too much time testing the existing system because I anticipated completely starting from scratch, so I only did usability testing with two people. I also created a <a href="pics/l&d/usability-script.pdf">script</a> in preparation, and what I observed helped me gain a better understanding of some of the pain points. Below are screens from the original site that users were navigating.
 	  	<div id="secondary-pics">
-	  		<img class="pics-2" src="pics/l&d/initial-landing.png" style="box-shadow: 1px 1px 10px #BABABA;">
-			<img class="pics-2" src="pics/l&d/initial-admin.png" style="box-shadow: 1px 1px 10px #BABABA;">
+	  		<img class="pics-2" src="pics/l&d/initial-landing.png">
+			<img class="pics-2" src="pics/l&d/initial-admin.png">
 		</div>
 		<p>
 		The first picture is the landing page, which has several separate tables below the visible one and lots of redundant information. The second screen is the "Admin Dashboard," essentially a table of all the metadata collected through the portal through the request process. 
@@ -203,7 +203,7 @@
 
 		<div class="process-title">User Stories</div>
 		<div class="panel">
-		  <img src="pics/l&d/user-stor.png" class="med-pic" style="box-shadow: 1px 1px 10px #BABABA;">
+		  <img src="pics/l&d/user-stor.png" class="med-pic">
 		  <div class="inner-text">
 		  	The next logical step was to create prioritized user stories for each user group. View the full document <a href="">here.</a>  
 		  	<p>Creating these user stories helped me flesh out the specific features that we identified through product visioning, identify which features belonged on which page, and draw the line between MVP features and nice-to-haves.</p>
@@ -214,14 +214,14 @@
 		<div class="panel">
 		The current approval process is a one-size-fits all process that is in no way tailored to the request or user. So, an essential piece of this portal redesign was also redesigning the underlying process behind the portal. I started by breaking up the process into two user groups, by practitioner level: Analysts - Senior Consultants, and Managers and above. At the Manager level, it is likely that your counselor is an administrator, which creates redundancies. 
 		<p>The second big divide that needed to be addressed was cost - inexpensive requests like a $10 online course should not have to go through several levels of approval, rather, they can be auto-approved if the practitioner is below a certain threshold. I took these issues, as well as several other factors, when creating the flows below.</p>
-		<img src="pics/l&d/bpm1.jpg" class="big-pic" style="box-shadow: 1px 1px 10px #BABABA;">
-		<img src="pics/l&d/bpm2.jpg" class="big-pic" style="box-shadow: 1px 1px 10px #BABABA;">
+		<img src="pics/l&d/bpm1.jpg" class="big-pic">
+		<img src="pics/l&d/bpm2.jpg" class="big-pic">
 		</div>
 
 		<div class="process-title">Wireframes</div>
 		<div class="panel">
 
-		  <img src="pics/l&d/crazy8.jpg" class="med-pic" style="box-shadow: 1px 1px 10px #BABABA;">
+		  <img src="pics/l&d/crazy8.jpg" class="med-pic">
 		  <div class="inner-text">
 			There are three separate levels of unique screens. Shown is my initial brainstorm for the requester landing page.
 			<p>Requester:</p>
@@ -239,9 +239,9 @@
 		  </div>
 
 		  	<div id="secondary-pics">
-		  		<img class="pics-3" src="pics/l&d/wire-landing.jpg" style="box-shadow: 1px 1px 10px #BABABA; vertical-align: top">
-				<img class="pics-3" src="pics/l&d/wire-faq.jpg" style="box-shadow: 1px 1px 10px #BABABA; vertical-align: top">
-				<img class="pics-3" src="pics/l&d/wire-expenses.jpg" style="box-shadow: 1px 1px 10px #BABABA; vertical-align: top">
+		  		<img class="pics-3" src="pics/l&d/wire-landing.jpg">
+				<img class="pics-3" src="pics/l&d/wire-faq.jpg">
+				<img class="pics-3" src="pics/l&d/wire-expenses.jpg">
 			</div>
 		</div>
 
@@ -253,7 +253,7 @@
 		<div class="last">
 		<div class="process-title">Visual Design</div>
 		<div class="panel">
-			<img src="pics/l&d/style-guide.jpg" class="med-pic" style="box-shadow: 1px 1px 10px #BABABA;">
+			<img src="pics/l&d/style-guide.jpg" class="med-pic">
 			<div class="inner-text">
 			After incorporating feedback from usability testing, I moved on to visual design. I had to use Deloitte Digital branding, so I created a simplified style guide based on the lengthy existing style guide. I only had a few days for visual, so I only completed the requester screens, but I worked through several iterations and had a senior designer review my work. View all the requester screens <a href="pics/l&d/requester.pdf">here</a> and all the approver screens <a href="pics/l&d/approver.pdf">here</a>! 
 			</div>
