--- a/l&d.html
+++ b/l&d.html
@@ -50,6 +50,9 @@
 				<p>
 				Through my work, I made requesting education opportunities easier and more transparent for practitioners and better informed leadership on budget decisions.
 				</p>
+				<p>
+				View all the requester screens <a href="pics/l&d/requester.pdf">here</a> and all the approver screens <a href="pics/l&d/approver.pdf">here</a>! 
+				</p>
 
 			</div>
 			
