removed pic that wasnt showing up

--- a/l&d.html
+++ b/l&d.html
@@ -224,8 +224,8 @@
 		<div class="process-title">Wireframes</div>
 		<div class="panel">
 
-		  <img src="pics/l&d/crazy8.jpg" class="med-pic">
-		  <div class="inner-text">
+<!-- 		  <img src="pics/l&d/crazy8.jpg" class="med-pic"> -->
+		  <div >
 			There are three separate levels of unique screens. Shown is my initial brainstorm for the requester landing page.
 			<p>Requester:</p>
 				<li>Landing page - Requests (their own)</li>
